# Project-Onyx

./: .gitignore  CMakeLists.txt  DiagnosticsTool.cpp  DiagnosticsTool.rc  README.md  build.py  pytest.ini  resource.h
assets/: README2.md
docs/: architecture.md
test/: downlink_update.onnx
tests/: test_build_stego_integration.py  test_downlink_directive.py  test_real_model_pipeline.py
wasm3/source/: m3_compile.c  m3_config_platforms.h  m3_core.h  m3_env.c  m3_env.h  m3_exec.h  m3_exec_defs.h  m3_info.c  m3_module.c  m3_parse.c  wasm3.h
wasm_license_module/: Cargo.toml
wasm_license_module/src/: lib.rs
